--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <article>
                     <header>
                         <h1>article header h1</h1>
+                        <p>Nueva linea</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit. Aliquam sodales urna non odio egestas tempor.
                             Nunc vel vehicula ante. Etiam bibendum iaculis
